syntax = "proto3";

service IdentityProto{
  rpc GetClosestShelter (GetClosestShelterRequest) returns (GetClosestShelterReply);
  rpc IsUserOwnerOfShelter (IsUserOwnerOfShelterRequest) returns (IsUserOwnerOfShelterReply);
}

message GetClosestShelterRequest{
  string longitude = 1;
  string latitude = 2;
}

message IsUserOwnerOfShelterRequest{
  string userId = 1;
  string shelterId = 2;
}

message GetClosestShelterReply{
  string shelterId = 1;
}

message IsUserOwnerOfShelterReply{
  bool isOwner = 1;
}